add wed pdf file car-out

--- a/menu-pdf.html
+++ b/menu-pdf.html
@@ -92,6 +92,11 @@
                                     </i> PDF ใบขออนุญาตออกนอกสถานที่ </button></a>
                         </div>
 
+                        <div class="col-12 mt-3">
+                            <a href="https://drive.google.com/drive/folders/1WAULuZgpLJOSwpcWxS4x1dl4R_y3MoEm"><button class="btn btn-secondary btn-block" type="button">
+                                    </i> PDF ใบขออนุญาติให้รถส่วนกลาง </button></a>
+                        </div>
+
                         <!-- <div class="col-12 mt-3">
                             <a href="#.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> PDF File </button></a>
