edit name offsite

--- a/form-allow-carout.html
+++ b/form-allow-carout.html
@@ -105,7 +105,7 @@
                         <div class="col-sm-8">
                             <select type="number" class="form-control" id="" name="ใช้รถยนต์" required>
                                 <option value="4กฆ-6056">4กฆ-6056 (วีโก้)</option>
-                                <option value="ภฉ-4502">ภฉ-4502</option>
+                                <option value="ภฉ-4502">ภฉ-4502 (อีซูซุ)</option>
                                 <option value="96-2706">96-2706 (6ล้อ)</option>
                                 <option value="อย-2669">อย-2669 (รถตู้)</option>
                             </select>
