--- a/form-allow-offsite.html
+++ b/form-allow-offsite.html
@@ -176,10 +176,12 @@
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="ran7" name="หัวหน้างาน" placeholder=""
                                 required="required">
+                                
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
                                 <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร</option>
                                 <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
+                                <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์ (รักษาการแทน)</option>
                             </select>
                         </div>
                     </div>
@@ -190,13 +192,14 @@
                             <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="ran8" name="ผู้อนุมัติ" placeholder=""
                                 required="required">
+                                
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
-                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (ปฏิบัติราชการแทน)</option>
+                                <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (รักษาการแทน)</option>
                                 <option value="นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ ไชยศรีชลธาร
-                                    (ปฏิบัติราชการแทน)</option>
-                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (ปฏิบัติราชการแทน)
+                                    (รักษาการแทน)</option>
+                                <option value="นายปรีชา อานันท์รัตนกุล">นายปรีชา อานันท์รัตนกุล (รักษาการแทน)
                                 </option>
-
+                                <option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์ (รักษาการแทน)</option>
                             </select>
                         </div>
                     </div>
