--- a/form-leave-sacation.html
+++ b/form-leave-sacation.html
@@ -30,23 +30,6 @@
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
-
-    <!--
-    <style>
-        /* Chrome, Safari, Edge, Opera */
-        input::-webkit-outer-spin-button,
-        input::-webkit-inner-spin-button {
-            -webkit-appearance: none;
-            margin: 0;
-        }
-
-        /* Firefox */
-        input[type=number] {
-            -moz-appearance: textfield;
-        }
-    </style>
-    -->
-
 </head>
 
 <body class="login-page"
@@ -65,6 +48,7 @@
                 <h5> แบบฟอร์มใบลาพักผ่อน </h5>
             </div>
 
+            <!-- ตารางสถิติการลา -->
             <div class="card-body login-card-body">
                 <table class="table table-bordered">
                     <tbody>
@@ -84,11 +68,6 @@
                 </table>
             </div>
 
-
-
-
-
-
             <!-- Form leave-sacation -->
             <div class="card-body login-card-body">
                 <form method="post" id="formsacation">
@@ -101,6 +80,7 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
@@ -110,6 +90,7 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ประเภท</label>
                         <div class="col-sm-8">
@@ -117,6 +98,7 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
@@ -126,6 +108,7 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
@@ -135,6 +118,7 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">มีกำหนด</label>
                         <div class="col-sm-8">
@@ -158,10 +142,10 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ผู้ตรวจสอบ</label>
                         <div class="col-sm-8">
-                            <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="" name="ผู้ตรวจสอบ" required>
                                 <option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
@@ -170,10 +154,10 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ผู้อนุมัติ</label>
                         <div class="col-sm-8">
-                            <!-- ทำเลือกชื่อผู้ใช้งาน -->
                             <select type="text" class="form-control" id="" name="ผู้อนุมัติ" required="required">
                                 <option value="นายอนุชิต ฉ่ำสิงห์">นายอนุชิต ฉ่ำสิงห์</option>
                                 <option value="ป-นางสาวปรีดาวรรณ ไชยศรีชลธาร">นางสาวปรีดาวรรณ
@@ -203,15 +187,18 @@
                         </div>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <p style="font-size:13px; color:red;"> *** การบันทึกข้อมูลจะใช้เวลาประมาณ 10
                         วินาที กรุณารอสักครู่เมื่อเสร็จแล้วจะมีข้อความแจ้งเตือน ***</p>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->    
                     <div class="col-12 mt-3">
                         <button id="" class="btn btn-success  btn-block " type="submit" name="submit"
                             style="margin-bottom: 5px;"><i class="fas fa-sign-out-alt"></i>
                             บันทึกข้อมูล</button>
                     </div>
 
+                    <!-- ทำเลือกชื่อผู้ใช้งาน -->
                     <div class="col-12 mt-3">
                         <a href="./home.html"><button class="btn btn-light btn-block " type="button"><i
                                     class="fa fa-bookmark"></i>
