--- a/home.html
+++ b/home.html
@@ -57,16 +57,16 @@
 
                     <div class="row justify-content-around">
 
-                        <!-- leave-sick.html -->
+                        <!-- form-leave-sick.html -->
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-light btn-block" type="button">
-                                    </i> TEST ใบลาป่วย / ใบลากิจ (ปิดการใช้งาน)</button></a>
+                            <a href=""><button class="btn btn-secondary btn-block" type="button">
+                                    </i> ใบลาป่วย / ใบลากิจ </button></a>
                         </div>
 
-                        <!-- leave-sacation.html -->
+                        <!-- form-leave-sacation.html -->
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-light btn-block" type="button">
-                                    </i> TEST ใบลาพักผ่อน (ปิดการใช้งาน)</button></a>
+                            <a href=""><button class="btn btn-secondary btn-block" type="button">
+                                    </i> ใบลาพักผ่อน </button></a>
                         </div>
 
 
@@ -81,8 +81,8 @@
                         </div>
 
                         <div class="col-12 mt-3">
-                            <a href="menu-pdf.html"><button class="btn btn-secondary btn-block" type="button">
-                                    </i> Drive PDF File </button></a>
+                            <a href="menu-pdf.html"><button class="btn btn-warning btn-block" type="button">
+                                    </i> ที่เก็บไฟล์ PDF </button></a>
                         </div>
                         <!--//icon //<i class="fas fa-receipt"></i> //-->
 
