--- a/login.html
+++ b/login.html
@@ -125,7 +125,7 @@
 
 					</div>
 					<center>
-						<p style="color:red;"> Version 1.0.59 </p>						
+						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง</h6>						
 					</center>
 
 				</form>
