--- a/login.html
+++ b/login.html
@@ -125,7 +125,8 @@
 
 					</div>
 					<center>
-						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง</h6>						
+						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง<br>- เพิ่มชื่อผู้รักษาการใบขออนุญาตออกนอกสถานที่</h6>	
+											
 					</center>
 
 				</form>
