--- a/login.html
+++ b/login.html
@@ -125,8 +125,10 @@
 
 					</div>
 					<center>
-						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง<br>- เพิ่มชื่อผู้รักษาการแทนใบขออนุญาตออกนอกสถานที่</h6>	
-											
+						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง<br>- เพิ่มใบขอลาป่วย /
+							ใบลากิจ<br>- เพิ่มใบขอลาพักผ่อน<br>- เพิ่มรวมที่เก็บไฟล์ PDF<br>-
+							ปรับวันที่ให้สามารถเลือกเป็นปี พ.ศ. ได้<br>- เพิ่มตารางแสดงวันคงเหลือ ลาป่วย/ลากิจ/ลาพักผ่อน</h6>
+
 					</center>
 
 				</form>
