--- a/menu-pdf.html
+++ b/menu-pdf.html
@@ -60,7 +60,7 @@
                 </div>
 
                 <h2> PhegaeriOnline </h2>
-                <h6> ** Drive PDF File ** </h6>
+                <h6> ที่เก็บไฟล์ PDF </h6>
                 <!-- <h5> ลงชื่อเข้าใช้งานเรียบร้อย</h5> 
                 <h6 id="name">Username</h6>
                 -->
@@ -77,23 +77,29 @@
 
 
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-light btn-block " type="button">
-                                    </i> PDF ใบลาป่วย / ใบลากิจ (ปิดการใช้งาน)</button></a>
+                            <a
+                                href="https://drive.google.com/drive/folders/1FwtihO3GL_X7jQMkqhYSvjoKkrETOOhr?usp=sharing"><button
+                                    class="btn btn-secondary btn-block" type="button">
+                                    </i> PDF ใบลาป่วย / ใบลากิจ</button></a>
                         </div>
 
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-light btn-block " type="button">
-                                    </i> PDF ใบลาพักผ่อน (ปิดการใช้งาน)</button></a>
+                            <a
+                                href="https://drive.google.com/drive/folders/1P8U_fTkHvOLH3qCEum9FAag4T8of7s9f?usp=sharing"><button
+                                    class="btn btn-secondary btn-block" type="button">
+                                    </i> PDF ใบลาพักผ่อน </button></a>
                         </div>
 
 
                         <div class="col-12 mt-3">
-                            <a href="https://drive.google.com/drive/folders/12zNNxqrMNmylLRWpTYyTeWlNZ8VgDuxO"><button class="btn btn-secondary btn-block" type="button">
+                            <a href="https://drive.google.com/drive/folders/12zNNxqrMNmylLRWpTYyTeWlNZ8VgDuxO"><button
+                                    class="btn btn-secondary btn-block" type="button">
                                     </i> PDF ใบขออนุญาตออกนอกสถานที่ </button></a>
                         </div>
 
                         <div class="col-12 mt-3">
-                            <a href="https://drive.google.com/drive/folders/1WAULuZgpLJOSwpcWxS4x1dl4R_y3MoEm"><button class="btn btn-secondary btn-block" type="button">
+                            <a href="https://drive.google.com/drive/folders/1WAULuZgpLJOSwpcWxS4x1dl4R_y3MoEm"><button
+                                    class="btn btn-secondary btn-block" type="button">
                                     </i> PDF ใบขออนุญาติให้รถส่วนกลาง </button></a>
                         </div>
 
@@ -104,12 +110,12 @@
                         <!--//icon //<i class="fas fa-receipt"></i> //-->
 
 
-                        
+
                         <div class="col-12 mt-3">
                             <a href="home.html"><button class="btn btn-light btn-block " type="button"><i
                                         class="fa fa-bookmark"></i> กลับสู่หน้าหลัก </button></a>
                         </div>
-                        
+
 
                         <div class="col-12 mt-3">
                             <button id="logout" class="btn btn-success btn-block " type="Button" name="LogoutButton"
