--- a/form-leave-sick.html
+++ b/form-leave-sick.html
@@ -30,6 +30,8 @@
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
+    <!-- CSS Datepicker-thai วันที่ไทย -->
+    <link rel="stylesheet" href="plugins/bootstrap-datepicker-thai/css/datepicker.css">
 
 </head>
 
@@ -81,7 +83,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran1" name="เขียนวันที่" placeholder="">
+                            <input type="text" class="form-control" id="" name="เขียนวันที่" data-provide="datepicker"
+                                data-date-language="th-th" placeholder="01/01/2566" required>
 
                         </div>
                     </div>
@@ -100,7 +103,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran3" name="ลาวันที่" placeholder="">
+                            <input type="text" class="form-control" id="" name="ลาวันที่" data-provide="datepicker"
+                                data-date-language="th-th" placeholder="01/01/2566" required>
 
                         </div>
                     </div>
@@ -108,7 +112,8 @@
                     <div class="form-group row">
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
-                            <input type="date" class="form-control" id="ran4" name="ถึงวันที่" placeholder="">
+                            <input type="text" class="form-control" id="" name="ถึงวันที่" data-provide="datepicker"
+                                data-date-language="th-th" placeholder="01/01/2566" required>
 
                         </div>
                     </div>
@@ -219,6 +224,13 @@
     <script src="dist/js/adminlte.min.js"></script>
     <script src="dist/js/bootstrap.bundle.min.js"></script>
     <script src="plugins/jquery/jquery.min.js"></script>
+
+    <!-- CSS Datepicker-thai แสดงวันที่ไทย -->
+    <script src="plugins/bootstrap-datepicker-thai/css/datepicker.css"></script>
+    <script src="plugins/jquery/jquery.js"></script>
+    <script src="plugins/bootstrap-datepicker-thai/js/bootstrap-datepicker.js"></script>
+    <script src="plugins/bootstrap-datepicker-thai/js/bootstrap-datepicker-thai.js"></script>
+    <script src="plugins/bootstrap-datepicker-thai/js/locales/bootstrap-datepicker.th.js"></script>
 
 </body>
 
