--- a/home.html
+++ b/home.html
@@ -59,13 +59,13 @@
 
                         <!-- form-leave-sick.html -->
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-secondary btn-block" type="button">
+                            <a href="form-leave-sick.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> ใบลาป่วย / ใบลากิจ </button></a>
                         </div>
 
                         <!-- form-leave-sacation.html -->
                         <div class="col-12 mt-3">
-                            <a href=""><button class="btn btn-secondary btn-block" type="button">
+                            <a href="form-leave-sacation.html"><button class="btn btn-secondary btn-block" type="button">
                                     </i> ใบลาพักผ่อน </button></a>
                         </div>
 
