--- a/form-allow-carout.html
+++ b/form-allow-carout.html
@@ -94,7 +94,7 @@
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="เขียนวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required>
+                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
@@ -150,7 +150,7 @@
                         <label class="col-sm-4 col-form-label">ในวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="ในวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required>
+                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
                         </div>
                     </div>
 
@@ -197,7 +197,7 @@
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="ถึงวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required>
+                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
                         </div>
                     </div>
 
