--- a/form-allow-offsite.html
+++ b/form-allow-offsite.html
@@ -76,7 +76,7 @@
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="ran1" name="เขียนวันที่"
-                                data-provide="datepicker" data-date-language="th-th" placeholder="01/01/2566" required>
+                                data-provide="datepicker" data-date-language="th-th" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                         <label class="col-sm-4 col-form-label">ในวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="ran4" name="ในวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required>
+                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
