--- a/form-leave-sacation.html
+++ b/form-leave-sacation.html
@@ -85,7 +85,7 @@
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="เขียนวันที่" placeholder="01/01/2566" required>
+                                data-date-language="th-th" name="เขียนวันที่" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
@@ -103,7 +103,7 @@
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="ลาวันที่" placeholder="01/01/2566" required>
+                                data-date-language="th-th" name="ลาวันที่" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="ถึงวันที่" placeholder="01/01/2566" required>
+                                data-date-language="th-th" name="ถึงวันที่" placeholder="01/01/2566" required readonly>
 
                         </div>
                     </div>
