--- a/login.html
+++ b/login.html
@@ -96,7 +96,6 @@
 								<!-- //จ้างเหมา// -->
 								<option value="นางมณีรัตน์ สุขโต">นางมณีรัตน์ สุขโต</option>
 								<option value="นางกัญญารัตน์ แสงวงษา">นางกัญญารัตน์ แสงวงษา</option>
-								<option value="นายสมนึก ศรสีดา">นายสมนึก ศรสีดา</option>
 								<option value="นายเลียด ผลสุก">นายเลียด ผลสุก</option>
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
@@ -125,10 +124,7 @@
 
 					</div>
 					<center>
-						<h6 style="color:red;"> Version 1.0.60<br>- เพิ่มใบขออนุญาติให้รถส่วนกลาง<br>- เพิ่มใบขอลาป่วย /
-							ใบลากิจ<br>- เพิ่มใบขอลาพักผ่อน<br>- เพิ่มรวมที่เก็บไฟล์ PDF<br>-
-							ปรับวันที่ให้สามารถเลือกเป็นปี พ.ศ. ได้<br>- เพิ่มตารางแสดงวันคงเหลือ ลาป่วย/ลากิจ/ลาพักผ่อน</h6>
-
+						<h6 style="color:red;"> Version 1.0.60
 					</center>
 
 				</form>
