--- a/home.html
+++ b/home.html
@@ -46,6 +46,9 @@
                 <h2> PhegaeriOnline </h2>
                 <!-- <h5> ลงชื่อเข้าใช้งานเรียบร้อย</h5> -->
                 <h6 id="name">Username</h6>
+                <h6>- - - - - - - - - - - - - - - - - - - - - - -</h6>
+                <h6 style="color:blue;">ผู้อำนวยการ(ผู้อนุมัติ) : นายจิรวัสส์ เจียตระกูล</h6>
+                <h6 style="color:blue;">รักษาการแทน</h6>
             </div>
 
 
