--- a/login.html
+++ b/login.html
@@ -124,7 +124,8 @@
 
 					</div>
 					<center>
-						<h6 style="color:red;"> Version 1.0.60
+						<h6 style="color:red;"> Version 1.0.60</h6>
+						<h6 style="color:red;">- แสดงชื่อผู้อำนวยการ(ผู้อนุมัติ) รายวัน</h6>
 					</center>
 
 				</form>
