--- a/home.html
+++ b/home.html
@@ -125,9 +125,7 @@
                 window.location = "login.html"
             }
             else {
-                document.getElementById("name").innerHTML = "ผู้ใช้งาน // : " + username
-                document.getElementById("dname").innerHTML = "ผู้อำนวยการ(ผู้อนุมัติ) : นายจิรวัสส์ เจียตระกูล"
-                document.getElementById("ddeta").innerHTML = "รักษาการแทน"
+                document.getElementById("name").innerHTML = "ผู้ใช้งาน : " + username
             }
         }
 
