--- a/form-leave-sick.html
+++ b/form-leave-sick.html
@@ -84,7 +84,7 @@
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="เขียนวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" placeholder="" required readonly>
 
                         </div>
                     </div>
@@ -104,7 +104,7 @@
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="ลาวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" placeholder="" required readonly>
 
                         </div>
                     </div>
@@ -113,7 +113,7 @@
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" name="ถึงวันที่" data-provide="datepicker"
-                                data-date-language="th-th" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" placeholder="" required readonly>
 
                         </div>
                     </div>
