--- a/form-leave-sacation.html
+++ b/form-leave-sacation.html
@@ -2,13 +2,12 @@
 <html lang="en">
 
 <head>
+    <!-- <base target="_top"> -->
+    <title>ใบลาพักผ่อน</title>
+
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-
-    <!-- <base target="_top"> -->
-    <title>ใบลาพักผ่อน</title>
-    <link rel="shortcut icon">
 
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <!-- Font Awesome Icons -->
@@ -25,15 +24,19 @@
 
     <link rel="stylesheet" href="dist/css/bootstrap.min.css">
 
-    <link rel="stylesheet" href="dist/css/sweetalert.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
 
     <!-- Google Font: Source Sarabun -->
     <link href="https://fonts.googleapis.com/css2?family=Sarabun:wght@100;300;500;700&amp;display=swap"
         rel="stylesheet">
+    <!-- CSS Datepicker-thai วันที่ไทย -->
+    <link rel="stylesheet" href="plugins/bootstrap-datepicker-thai/css/datepicker.css">
+    
 </head>
 
 <body class="login-page"
-    style="background-repeat: no-repeat; background-size: cover; background-position: center center; min-height: 1420px;">
+style="background-repeat: no-repeat; background-size: cover; background-position: center center; min-height: 1200px;">
 
     <!-- Class ลงชื่อเข้าใช้งาน -->
     <div class="login-box">
@@ -85,7 +88,7 @@
                         <label class="col-sm-4 col-form-label">เขียนวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="เขียนวันที่" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" name="เขียนวันที่" placeholder="" required readonly>
 
                         </div>
                     </div>
@@ -103,7 +106,7 @@
                         <label class="col-sm-4 col-form-label">ลาวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="ลาวันที่" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" name="ลาวันที่" placeholder="" required readonly>
 
                         </div>
                     </div>
@@ -113,7 +116,7 @@
                         <label class="col-sm-4 col-form-label">ถึงวันที่</label>
                         <div class="col-sm-8">
                             <input type="text" class="form-control" id="" data-provide="datepicker"
-                                data-date-language="th-th" name="ถึงวันที่" placeholder="01/01/2566" required readonly>
+                                data-date-language="th-th" name="ถึงวันที่" placeholder="" required readonly>
 
                         </div>
                     </div>
