--- a/login.html
+++ b/login.html
@@ -86,8 +86,8 @@
 								<option value="นายอภิชาติ ยิ่งวุฒิวรกุล">นายอภิชาติ ยิ่งวุฒิวรกุล</option>
 								<option value="นายชาตรี หาศาสน์ศรี">นายชาตรี หาศาสน์ศรี</option>
 								<option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
-								<option value="นายสกล สิงห์สี">นายสกล สิงห์สี</option>
-								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
+								<!-- <option value="******">******</option> -->
+								<!-- <option value="******">******</option> -->
 								<!-- //ลูกจ้างประจำ// -->
 								<option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
 								<option value="นายสมคิด นัยวงศ์">นายสมคิด นัยวงศ์</option>
