--- a/form-leave-sick.html
+++ b/form-leave-sick.html
@@ -192,8 +192,7 @@
                                 <option value="ร-นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์ (รักษาการแทน)</option>
                                 <option value="ร-นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น (รักษาการแทน)</option>
                                 <option value="ร-นายสุรชาติ ระย้าทอง">สุรชาติ ระย้าทอง (รักษาการแทน)</option>
-                                <option value="นายอัคคพล เสนาณรงค์">นายอัคคพล
-                                    เสนาณรงค์(ผู้อำนวยการสถาบันวิจัยเกษตรวิศวกรรม)</option>
+                                <option value="นายอัคคพล เสนาณรงค์">นายวุฒิพล จันทร์สระคู(ผู้อำนวยการสถาบันวิจัยเกษตรวิศวกรรม)</option>
 
                             </select>
                         </div>
