--- a/login.html
+++ b/login.html
@@ -86,7 +86,7 @@
 								<option value="นายอภิชาติ ยิ่งวุฒิวรกุล">นายอภิชาติ ยิ่งวุฒิวรกุล</option>
 								<option value="นายชาตรี หาศาสน์ศรี">นายชาตรี หาศาสน์ศรี</option>
 								<option value="นายปราโมทย์ จันทร์ประสงค์">นายปราโมทย์ จันทร์ประสงค์</option>
-								<!-- <option value="******">******</option> -->
+								<option value="นายพชร สงัดเงาะ">นายพชร สงัดเงาะ</option>
 								<!-- <option value="******">******</option> -->
 								<!-- //ลูกจ้างประจำ// -->
 								<option value="นายอนุชา ชมดง">นายอนุชา ชมดง</option>
