--- a/login.html
+++ b/login.html
@@ -100,6 +100,7 @@
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
 								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
+								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
 							</select>
 						</div>
 					</div>
