--- a/login.html
+++ b/login.html
@@ -79,6 +79,7 @@
 								<option value="นายคชธร อ่างบุญพงษ์">นายคชธร อ่างบุญพงษ์</option>
 								<option value="นายณัฐสิทธิ์ อยู่เย็น">นายณัฐสิทธิ์ อยู่เย็น</option>
 								<option value="นายสุรชาติ ระย้าทอง">นายสุรชาติ ระย้าทอง</option>
+								<option value="นายวีระชัย เจริญสุข">นายวีระชัย เจริญสุข</option>
 								<!-- //ข้าราชการ// -->
 								<!-- //พนักงานราชการ// -->
 								<option value="นายสันติ โพธิ์ทอง">นายสันติ โพธิ์ทอง</option>
