--- a/login.html
+++ b/login.html
@@ -102,6 +102,7 @@
 								<option value="นายสมบัติ ความคุ้นเคย">นายสมบัติ ความคุ้นเคย</option>
 								<option value="นายทศพร สิงหชัย">นายทศพร สิงหชัย</option>
 								<option value="น.ส.กัญญาวีร์ รวมพวก">น.ส.กัญญาวีร์ รวมพวก</option>
+								<option value="นางศรีประพันธุ์ รวมพวก">นางศรีประพันธุ์ รวมพวก</option>
 								<option value="นายเอก สุนทรวิภาต">นายเอก สุนทรวิภาต</option>
 							</select>
 						</div>
