--- a/form-leave-sick.html
+++ b/form-leave-sick.html
@@ -64,8 +64,15 @@
                             <th scope="row">ลากิจไปแล้ว</th>
                             <td align="right" id="swuser2">- วัน</td>
                         </tr>
-                    </tbody>
+                        <tr>
+                            <th scope="row">รวม</th>
+                            <td align="right" id="swuser3">- วัน</td>
+                        </tr>
+                    </tbody>                   
                 </table>
+                <br>
+                <p style="font-size:13px; color:red;"> * ข้าราชการ มีวันลารวมกัน ไม่เกิน 45 วัน</p>
+                <p style="font-size:13px; color:red;"> * พนังงานราชการ มีวันลารวมกัน ไม่เกิน 30 วัน</p>
             </div>
 
             <div class="card-body login-card-body">
